# src/Citadel.WebApi/Routes/Endpoints/Deployments.cs
@@ -1,7 +1,10 @@
-﻿using Mediator;
+﻿using Hosting.Extensions;
+using Mediator;
 using Microsoft.AspNetCore.Http.HttpResults;
+using Microsoft.AspNetCore.Mvc;
 using System.ComponentModel;
 using WebApi.Routes.Endpoints.Resources.Deployments;
+using WebApi.Routes.Endpoints.Resources.Registries;
 
 namespace WebApi.Routes.Endpoints;
 
@@ -20,5 +23,18 @@ public static class Deployments
 
         //var result = await mediator.Send(new GetDeployment(), cancellationToken);
         //return EndpointHandlers.HandleResult(result, DeploymentView.Map);
+    }
+
+    public static async Task<Results<Ok<DeploymentView>, ProblemHttpResult>> Create(IMediator mediator, [FromBody] DeploymentInput request, CancellationToken cancellationToken)
+    {
+        throw new NotImplementedException();
+        //var result = await mediator.Send(request.ToCommand(), cancellationToken);
+        //return EndpointHandlers.HandleResult(result, DeploymentView.Map);
+    }
+
+    public static async Task<Results<NoContent, ProblemHttpResult>> Delete(IMediator mediator, [FromBody] DeleteDeploymentsInput request, CancellationToken cancellationToken)
+    {
+        var result = await mediator.Send(request.ToCommand(), cancellationToken);
+        return EndpointHandlers.HandleResultForNoContent(result);
     }
 }
