# src/Citadel.WebApi/Routes/Endpoints/Resources/Deployments/DeleteDeploymentsInput.cs
@@ -1,0 +1,9 @@
+
+using Application.Features.Deployments.Commands;
+
+namespace WebApi.Routes.Endpoints.Resources.Deployments;
+
+public sealed record DeleteDeploymentsInput(IEnumerable<Guid> Ids)
+{
+    internal DeleteDeployments ToCommand() => new(Ids);
+}
